2015-02-09  Mikael Magnusson  <mikachu@gmail.com>

	* 34466: Src/utils.c: Fix double unmeta in rm verification

2015-02-08  Daniel Hahler  <git@thequod.de>

	* 34469: Completion/Unix/Command/_git: git completion: add "stash"
	from refs/stash to __git_heads

	* 34470: Completion/Unix/Command/_adb: completion: adb: add
	"sideload" command

	* 34467: Completion/Unix/Command/_git: completion: git: minor doc
	fixes

	* 34468: Completion/Unix/Command/_git: completion: git: stash:
	handle 'save' being the default

2015-02-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34464: Completion/Unix/Command/_mtr: Update mtr completion
	to mtr 0.82

2015-02-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34456: _arguments: lopts should be initialized as an array

2015-02-06  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19825: Doc/Zsh/manual.yo: clear statement that zsh is
	not by default POSIX compatible.

2015-02-03  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/builtins.yo: fix formatting of "--".

2015-02-03  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 34451: Src/mem.c: use mmap() also on Mac OS X

2015-02-03  Peter Stephenson  <p.stephenson@samsung.com>

	* users/19800: Doc/Zsh/params.yo: more help on $HISTORY_IGNORE.

	* 34455: Src/Modules/db_gdbm.c: some further parameter bug fixes
	including memory leak and unsetting old parameter too late.

2015-02-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 34447: Src/Modules/db_gdbm.c: fix assignment of key-value array
	to ztie'd parameter.

2015-02-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34444: Completion/Unix/Command/_git: git completion: minor
	improvements to 'commit' and 'rebase'

2015-02-01  Barton E. Schaefer  <schaefer@zsh.org>

	* 34446: Doc/Zsh/mod_db_gdbm.yo, Src/Modules/db_gdbm.c: add
	"ztie -r" and "zuntie -u", update documentation for this and
	for 34430,34439.

2015-02-01  Daniel Shahaf  <d.s@daniel.shahaf.name>
